# MenuReader

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  app_file.py  del-ai_client.py  del-ai_menu_app.py  del-app-photo.py  google-vision-service-account.json  main.py  menu_test_summary.py  ocr_result.txt  pyproject.toml  pytest.ini  requirements.txt  run_app.py  test_ai_menu_analyzer.py  test_final_fix.py  test_menu_image.py  test_real_menu.py  test_results.json  test_security_config.py  test_simple_ocr.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: deploy.yml
.kiro/specs/menu-image-analyzer/: design.md  requirements.md  tasks.md
app/: __init__.py  app.py  config.py
app/models/: data_models.py
app/services/: __init__.py  ai_menu_analyzer.py  ai_menu_processor.py  description_service.py  google_vision_ocr_service.py  image_search_service.py  menu_parser.py  menu_processor.py  ocr_service.py  results_service.py  secure_api_client.py
app/templates/: index.html  results.html
examples/: description_service_example.py  google_vision_example.py  image_search_service_example.py  ocr_service_example.py  results_display_example.py
tests/: conftest.py  test_app.py  test_data_models.py  test_description_service.py  test_image_search_service.py  test_ocr_service.py  test_property_comprehensive_description.py  test_property_file_validation.py  test_property_graceful_fallback.py  test_property_language_agnostic.py  test_results_service.py
